# Auth-Proxy

./: .dockerignore  .env.auth-proxy.example  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Contributing.md  Dockerfile  LICENSE  README.md  README_ja.md  docker-compose.example.yml  docker-compose.yml  progress.md
.github/workflows/: claude-code-review.yml  publish.yml
migrations/: 001_initial.sql  003_mfa.sql  004_mfa_add_attempt_count.sql
src/: config.rs  lib.rs  main.rs  mfa.rs  router.rs  session.rs  sessions_db.rs  state.rs  users.rs  users_db.rs
src/cli/: hash.rs  init_admin.rs  list.rs  mod.rs  verify.rs
src/handlers/: login.rs  logout.rs  mfa.rs  mod.rs  proxy.rs  static_files.rs
src/handlers/admin/: dashboard.rs  mod.rs  users.rs
src/handlers/settings/: mod.rs  security.rs
src/middleware/: admin.rs  auth.rs  mod.rs
