[package]
name = "auth-proxy"
version = "1.0.0"
edition = "2024"

[lib]
name = "auth_proxy"
path = "src/lib.rs"

[[bin]]
name = "auth-proxy"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tokio = { version = "1", features = ["full"] }

# Authentication & crypto
argon2 = "0.5"
rand = { version = "0.8", features = ["std"] }
hex = "0.4"
totp-rs = { version = "5", features = ["qr"] }
aes-gcm = "0.10"
base64 = "0.22"
qrcode = "0.13"
base32 = "0.4"

# Configuration & environment
dotenvy = "0.15"

# CLI parser
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async traits

# HTTP client for proxying
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
http = "1"
http-body-util = "0.1"
async-trait = "0.1"

# Password input (CLI)
rpassword = "7"

[dev-dependencies]
axum-test = "20"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
